Remove namespace from jobs