@@ -1,14 +1,12 @@
 package com.s24.redjob.channel.command;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonTypeName;
-
-import static java.util.Collections.emptyList;
 
 /**
  * Command to shutdown queue workers.
@@ -19,11 +17,6 @@ public class PauseQueueWorker {
     * Pause (true) or unpause (false) workers?.
     */
    private boolean pause;
-
-   /**
-    * Namespace.
-    */
-   private String namespace;
 
    /**
     * Workers of which queues should be paused.
@@ -41,39 +34,34 @@ public class PauseQueueWorker {
    /**
     * Constructor to pause/unpause all workers.
     *
-    * @param namespace
-    *           Namespace.
+    * @param pause
+    *           Pause (true) or unpause (false)?
     */
-   public PauseQueueWorker(String namespace, boolean pause) {
-      this(namespace, pause, emptyList());
+   public PauseQueueWorker(boolean pause) {
+      this(pause, List.of());
    }
 
    /**
     * Constructor to pause/unpause workers processing the given queues.
     *
-    * @param namespace
-    *           Namespace.
     * @param pause
     *           Pause (true) or unpause (false)?
     * @param queues
     *           Queues to select workers. If empty, select all workers.
     */
-   public PauseQueueWorker(String namespace, boolean pause, String... queues) {
-      this(namespace, pause, Arrays.asList(queues));
+   public PauseQueueWorker(boolean pause, String... queues) {
+      this(pause, List.of(queues));
    }
 
    /**
     * Constructor to pause/unpause workers processing the given queues.
     *
-    * @param namespace
-    *           Namespace.
     * @param pause
     *           Pause (true) or unpause (false)?
     * @param queues
     *           Queues to select workers. If empty, select all workers.
     */
-   public PauseQueueWorker(String namespace, boolean pause, Collection<String> queues) {
-      this.namespace = namespace;
+   public PauseQueueWorker(boolean pause, Collection<String> queues) {
       this.pause = pause;
       this.queues.addAll(queues);
    }
@@ -83,13 +71,6 @@ public class PauseQueueWorker {
     */
    public boolean isPause() {
       return pause;
-   }
-
-   /**
-    * Namespace.
-    */
-   public String getNamespace() {
-      return namespace;
    }
 
    /**
